test/corpus/comments.txt
================================================================================
Comment only
================================================================================
# just a note
--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment before message
================================================================================
# incoming
8=A|10=1
--------------------------------------------------------------------------------

(source_file
  (comment)
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Comment after message
================================================================================
8=A|10=1
# done
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (comment))

================================================================================
Consecutive comments
================================================================================
# one
# two
# three
--------------------------------------------------------------------------------

(source_file
  (comment)
  (line)
  (comment)
  (line)
  (comment))

================================================================================
Comments between messages
================================================================================
8=A|10=1
# separator
# still a separator
8=B|10=2
# trailing
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (comment)
  (line)
  (comment)
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (comment))

================================================================================
Comments separated by blank lines
================================================================================
# one

# two


# three
--------------------------------------------------------------------------------

(source_file
  (comment)
  (line)
  (comment)
  (line)
  (comment))

================================================================================
Empty comment
================================================================================
#
8=A|10=1
--------------------------------------------------------------------------------

(source_file
  (comment)
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Hash inside a value is not a comment
================================================================================
58=see #123|10=1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))
