test/corpus/messages.txt
================================================================================
Single field
================================================================================
8=FIX.4.4
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))))

================================================================================
Pipe delimiter
================================================================================
8=FIX.4.4|35=D|10=128
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Caret delimiter
================================================================================
8=FIX.4.4^35=D
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
SOH delimiter
================================================================================
8=FIX.4.435=D
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Trailing delimiter
================================================================================
8=FIX.4.4|10=128|
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)))

================================================================================
Value keeps equals signs and spaces
================================================================================
58=rejected: qty = 0|10=128
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Empty value
================================================================================
58=|10=128
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Messages on consecutive lines
================================================================================
8=A|10=1
8=B|10=2
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))
