test/corpus/separators_in_values.txt
================================================================================
Pipe inside a value
================================================================================
8=A|58=a = 0 | b = 1 |10=1|
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)))

================================================================================
Pipe followed by digits without equals stays in the value
================================================================================
8=A|58=a|12|10=1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Consecutive separators inside a value
================================================================================
8=A|58=a || b|10=1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Caret inside a value
================================================================================
8=A^58=a ^ b^10=1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
SOH inside a value
================================================================================
8=A58=a  b10=1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))
