test/corpus/whitespace.txt
================================================================================
Blank line between messages
================================================================================
8=A|10=1

8=B|10=2
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Several blank lines collapse into one line node
================================================================================
8=A|10=1



8=B|10=2
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Whitespace-only lines between messages
================================================================================
8=A|10=1
   
	 
8=B|10=2
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Indented message and comment
================================================================================
  # indented note
	8=A|10=1
--------------------------------------------------------------------------------

(source_file
  (comment)
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Spaces around the field separators
================================================================================
8 = A | 10 = 1
--------------------------------------------------------------------------------

(source_file
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value))))

================================================================================
Leading and trailing blank lines
================================================================================


8=A|10=1

--------------------------------------------------------------------------------

(source_file
  (line)
  (message
    (field (tag) (equals) (value))
    (delimiter)
    (field (tag) (equals) (value)))
  (line))

================================================================================
Blank lines only
================================================================================
  
	
--------------------------------------------------------------------------------

(source_file
  (line))

================================================================================
Empty file
================================================================================
--------------------------------------------------------------------------------

(source_file)
